Changes from jTDS 1.2.6
=======================

08/21/2012 - Holger Rehn
 o Applied build system changes proposed by Rainer Schwarze in patch #105.
 o Added compiler settings missing in some build files.
 o Updated feature matrix for SQL Server 2008 compatibility (Bug #643).

08/17/2012 - Holger Rehn
 o Added service provider configuration file for JDBC driver class (Bug #659).
 o Applied patch provided by Rainer Schwarze to reduce log pollution during
   emulated XA recovery (Bug #656).
 o Removed @Override annotation not supported prior to Java 1.5.
 o Fixed spurious login timeouts that could occur in case multiple connections
   are established concurrently (Bug #667).
 o Corrected bug, a stream hasn't been closed in CharsetInfo (Bug #642).

08/16/2012 - Holger Rehn
 o Fixed typos in Messages.properties (Bug #608).
 o Removed WebRing code from the project web site (Bug #660).
 o Fixed a race condition when closing a JtdsStatement in multiple threads
   concurrently (Patch #121, #118).


|||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||
||                                                                           ||
||                      SourceForge Project Upgrade                          ||
||                                                                           ||
|| The previous tracker item IDs have been replaced by individual bug/patch  ||
|| IDs and are no longer valid.                                              ||
||                                                                           ||
|||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||


===============================================================================
08/15/2012 - jTDS 1.2.6 released
===============================================================================

Changes from jTDS 1.2.5
=======================

08/15/2012 - Holger Rehn
 o Applied patch [3048203] by amallon, adding a new 'autoCommit' connection