@@ -1,6 +1,9 @@
 Changes from jTDS 1.2.6
 =======================
 
+09/07/2012 - Holger Rehn
+ o Fixed jTDS version reported by the driver.
+
 08/22/2012 - Holger Rehn
  o Updated feature matrix for SQL Server 2008 compatibility (Bug #643).
 
